--- a/style.css
+++ b/style.css
@@ -116,6 +116,11 @@ a:active {
   height:3rem;
   background-color: red;
 }
+.color-box-ticked{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 .choose-size{
   padding:1.5rem 0rem;
   /* border-bottom: 1px solid #B9BBBF; */
